--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
             </div>
             <div class="flex justify-center px-4 py-16 bg-base-200">
                 <img class="w-1/2 rounded-full"
-                    src="<%= model.image%>">
+                    src="<%= model.imageURL%>">
             </div>
             <div class="card-body justify-center">
                 <h2 class="card-title justify-center"><%= model.name%></h2>
